[tool.poetry]
name = "uengine"
version = "3.6.14"
description = "a micro webframework based on flask and pymongo"
authors = ["Pavel Vorobyov <aquavitale@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"
Flask = "^2.0.2"
pymongo = "^3.0"
lazy-object-proxy = "^1.7.1"
ipython = "^7.30.1"
cachelib = "^0.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
mongomock = "^3.23.0"
pytest = "^6.2.5"

[tool.poetry.scripts]
uengine = "uengine.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
